@@ -9,6 +9,7 @@
 	* added Age ViewHelper
 	* added new param to Link View Helper for custom ATagParams
 	* localize label of UserProfileActionWidget
+	* localize label of MyGroupsWidget
 
 2008-10-08 Ingo Renner  <ingo@typo3.org>
 
